# learn

./: .Makefile.swp  .gitignore  ANR.md  Makefile  README  code.txt  developEnvironment.md  gcdandlcm  reviewAndNew.txt  test.cpp  testC14.cpp  todo.md  todo.txt
algorithm/base/: bound.h  test.h
algorithm/sort/: comparisonSortNavigation.md
book/booknote/insideTheC++ObjectModel/: MIVirtualFunction.cpp  NRVtest.cpp  cppObjectModel.md  cppObjectModel_function.md  main.cpp  runtimeSemantics.md  templateEHAndRTTi.md
book/booknote/openglSuperBible_7th/: simpleApp.cpp
buildsystem/cmake/: cmakeSnapShot.md  cmakebuildsystem.md  file.md
buildsystem/cmake/tutorial/step1/: CMakeLists.txt  tutorial.cpp
buildsystem/cmake/tutorial/step1/MathFunctions/: MathFunctions.h
buildsystem/make/: main.cpp
cmake/: cmakeSnapShot.md  exampleCMakeFile.md
cmake/tutorial/: .gitignore
cmake/tutorial/step1/: CMakeLists.txt  TutorialConfig.h  tutorial.cpp
cmake/tutorial/step1/MathFunctions/: CMakeLists.txt  mysqrt.cpp
cpp/: functionReturnCost.cpp  shuffle.cpp  simpleDeque.cpp  template.md  todo.md
daily/: 20230103.cpp  20230110.cpp
design/: softDesign.md
dotNet/: DotNet.txt
dotNet/csharp/: Interoperability.txt  LINQ.txt  Reflection.txt  floatingPointRepresentation.txt  formatting.txt  metadata.txt  string.txt  typeCheck.txt  typeSystem.txt
dotNet/unity/: plug-ins__interoperability.txt
git/: githubNetSpeedUp.md  remote.md
goodCode/: principle.md
graphics/opengl/: MyOpenGLOverview.txt  creatingAWindow.md  helloWindow.md  todolist.md  transformations.md
graphics/opengl/learnOpengl/: OpenGL.md  creatingAWindow.md  shaders.md
graphics/opengl/learningModern3dGraphicProgramming/: link.txt  renderingOverview.txt  vectormath.txt
graphics/opengl/myOpengl/: transform.txt
graphics/opengl/newProject/: CMakeLists.txt  README  main.cpp
graphics/opengl/newProject/cmake/: AddSystemLib.cmake
graphics/opengl/newProject/shader/: shader.vs
graphics/opengl/newProject/src/glad/: glad.c
graphics/opengl/newProject/src/log/: log.cpp
graphics/opengl/newProject/src/platform/: platform_config.h  platform_macro.h
graphics/opengl/newProject/src/shader/: shader.cpp  shader.h
graphics/opengl/project/: CMakeLists.txt  main.cpp
graphics/opengl/project/cmake/: BuildHelper.cmake  BuildPlatformDefine.cmake  BuildPlatformDepend.cmake  BuildSet.cmake
graphics/opengl/project/resource/: shader.vs
graphics/opengl/project/shader/: shader.fs
graphics/opengl/project/src/: shader.h
graphics/opengl/project/src/log/: log.cpp  log.h
graphics/opengl/project/src/platform/: platform_config.h  platform_define.h  platform_macro.h
graphics/opengl/project/src/shader/: shader.cpp
graphics/unity/: RectTransform.md  unityExitCode-3221225785.md
keyboardShortcut/: visualStudio.md
make/: Makefile
make/numeric/: numeric.h
math/: CMakeLists.txt  complement.md  easeFunction.md  float_IEEE754.md  main.cpp  numeric.h  pythagorean.cpp  pythagorean.h  squareRoot.cpp  squareRoot.h  squareRoot.md  todo.md  vals_core_practice.h  xtr1commonPractice.h
math/linearAlgebra/: matrixRule.txt
numeric/: .numeric.cpp.swp  .numeric.h.swp  numeric.cpp
opengl/: creatingAWindow.md  helloTriangle.md  helloWindow.md  shaders.md  textures.md
opengl/project/: main.cpp
opengl/project/resource/: shader.fs  shader.vs
opengl/project/src/: shader.cpp
operatesystem/: hardLinkAndSoftLink.md
operatesystem/CLI/: command-chaining_Operators.md  command.md  du.md  find.md  findLargeFile.md  grep.md  sort.md  standard_IO_on_linux.md
operatesystem/android/: quick-start.md
operatesystem/mac/: HiDPI.md
operatesystem/windows/: spyPatches.md
other/: todo.md
other/book/booknote/insideTheC++ObjectModel/: CMakeLists.txt  MIVirtualFunction.cpp  constructionDestructionAndCopy.cpp  constructionDestructionAndCopy.md  cppObjectModel.md  main.cpp  runtimeSemantics.md
other/book/booknote/openglSuperBible_7th/: .gitignore  introduction.md
other/concept/: userNotification.md  workflow.md
other/daily/: 20230103.cpp  20230110.cpp
other/goodCode/: mkgmtime.cpp
other/keyboardShortcut/: visualStudio.md  vscode.md
other/machanicalKeyboard/: macCapLock.md
other/selectQuestion/: gameItemId.md
other/work/: slashAndBackslash.md
pl/cpp/: declspec.md  moduleOperation.md  stdcallAndcdecl.md  varargs.md
pl/python/: re.md
summary/mooth/: 12-2023.md
todayToDo/: 20230422.daily  20232322.daily  createTodayTodoListFile.sh
tools/bash/: .bashrc  updateBashrc.sh
tools/configfile/: .bashrc  .vimrc  backupBashrc.sh  backupVimrc.sh  copyUserConfig.sh  deployBashrc.sh  deployVimrc.sh
tools/configfile/UltiSnips/: markdown.snippets
tools/git/: alias.md  clean.md  credential.md  log.md  rebase.md  remote.md
tools/ide/vs/: DebugInformationFormat.md
tools/vim/: clangdbugs.md  comment.md  formatCode.md  motion.md  register.md
vim/: .vimrc  _vimrc  tutorial.md  updateVimrc.sh  youcompleteme.md
vs/: DebugInformationFormat.md
work/: 20230222.md
xcode/: iinabuild.md
zsh/: ohmyzsh.md
